--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,10 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "django==5.2.*",
+    "django-filter>=25.1",
     "django-ipware>=7.0.1",
     "django-stubs==5.2.*",
+    "djangorestframework>=3.16.0",
+    "markdown>=3.8.2",
     "requests>=2.32.4",
 ]
