--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "django-ipware>=7.0.1",
     "django-stubs==5.2.*",
     "djangorestframework>=3.16.0",
+    "environs[django]>=14.2.0",
     "markdown>=3.8.2",
     "requests>=2.32.4",
 ]
