--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "django-filter>=25.1",
     "django-ipware>=7.0.1",
     "django-stubs==5.2.*",
+    "django-taggit>=6.1.0",
     "djangorestframework>=3.16.0",
     "environs[django]>=14.2.0",
     "markdown>=3.8.2",
