--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "country-converter>=1.3.1",
     "django==5.2.*",
     "django-filter>=25.1",
     "django-ipware>=7.0.1",
