--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "django-taggit>=6.1.0",
     "djangorestframework>=3.16.0",
     "environs[django]>=14.2.0",
+    "geoip2>=5.1.0",
     "markdown>=3.8.2",
     "requests>=2.32.4",
 ]
