--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,3 +18,9 @@ dependencies = [
     "requests>=2.32.4",
     "uvicorn[standard]>=0.35.0",
 ]
+
+[dependency-groups]
+dev = [
+    "django-extensions>=4.1",
+    "ipython>=9.6.0",
+]
